minor, fix typo

--- a/webapp/app/partials/admin/admin.html
+++ b/webapp/app/partials/admin/admin.html
@@ -61,7 +61,7 @@
         </div>
       <div style="padding-top: 10px;width: 180px;">
         <button class="btn btn-primary btn-lg btn-block" ng-click="enableCache()">
-          <label tooltip="Disable Query Cache" style="cursor: pointer;">Enable Cache</label>
+          <label tooltip="Enable Query Cache" style="cursor: pointer;">Enable Cache</label>
         </button>
       </div>
       <div style="padding-top: 10px;width: 180px;">
