--- a/webapp/app/partials/cubeDesigner/measures.html
+++ b/webapp/app/partials/cubeDesigner/measures.html
@@ -23,21 +23,17 @@
               <table class="table table-striped table-hover">
                   <thead>
                       <tr>
-                          <th>ID</th>
                           <th>Name</th>
                           <th>Expression</th>
                           <th>Param Type</th>
                           <th>Param Value</th>
                           <th>Return Type</th>
+                          <th>Next Parameter</th>
                           <th ng-if="state.mode=='edit'">Actions</th>
                       </tr>
                   </thead>
                   <tbody>
                       <tr ng-repeat="measure in cubeMetaFrame.measures | filter: state.measureFilter track by $index">
-                          <td>
-                              <!--ID -->
-                              <b>{{measure.id = ($index + 1)}}</b>
-                          </td>
                           <td>
                               <!--Name -->
                               <span tooltip="measure name..">{{measure.name}}</span>
@@ -57,6 +53,9 @@
                           <td>
                               <!--Return Type -->
                               <span>{{measure.function.returntype}}</span>
+                          </td>                          <td>
+                              <!--Return Type -->
+                              <span>{{measure.function.parameter.next_parameter}}</span>
                           </td>
                           <td ng-if="state.mode=='edit'">
                               <!--Edit Button -->
@@ -179,6 +178,17 @@
                                   </span>
                               </div>
                           </div>
+                      </div>
+                      <!--Name-->
+                      <div class="form-group">
+                        <div class="row">
+                          <label class="col-xs-12 col-sm-3 control-label no-padding-right font-color-default"><b>Next Parameter</b></label>
+                          <div class="col-xs-12 col-sm-6">
+                            <input type="text" placeholder="Next parameter.." class="form-control"
+                                   tooltip="next parameter.." tooltip-trigger="focus"
+                                   ng-model="newMeasure.function.parameter.next_parameter" required />
+                          </div>
+                        </div>
                       </div>
               </div>
 
