KYLIN-811 streaming parser setting update

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -666,3 +666,6 @@ ul.messenger .messenger-message-inner,.ngCellText {
   content:"*";
   color:red;
 }
+.streamingParserCtr .chosen-container{
+  width:200px !important;
+}
