--- a/webapp/app/partials/cubes/cubes.html
+++ b/webapp/app/partials/cubes/cubes.html
@@ -133,6 +133,7 @@
 </div>
 
 <div ng-include="'partials/jobs/job_submit.html'"></div>
+<div ng-include="'partials/cubes/streaming_build_tip.html'"></div>
 <div ng-include="'partials/jobs/job_refresh.html'"></div>
 <div ng-include="'partials/jobs/job_merge.html'"></div>
 <div ng-include="'partials/projects/project_create.html'"></div>
