KYLIN-1281 move partition_date_start from DataModelDesc to CubeDesc

--- a/webapp/app/partials/jobs/job_submit.html
+++ b/webapp/app/partials/jobs/job_submit.html
@@ -38,7 +38,7 @@
                                 <!--no need convert UTC again-->
                                 <div ng-if="cube.segments.length == 0">
                                     {{jobBuildRequest.startTime =
-                                    (!!metaModel.model.partition_desc.partition_date_start)?metaModel.model.partition_desc.partition_date_start:0
+                                  (!!cube.detail.partition_date_start)?cube.detail.partition_date_start:0
                                     | reverseToGMT0 }}
                                 </div>
                                 <div ng-if="cube.segments.length > 0">
@@ -46,13 +46,6 @@
                                     <div ng-if="metaModel.model.partition_desc.partition_type=='APPEND'">
                                         {{ jobBuildRequest.startTime = cube.segments[cube.segments.length-1].date_range_end| reverseToGMT0 }}
                                     </div>
-                                    <!--<div ng-if="metaModel.model.partition_desc.cube_partition_type=='UPDATE_INSERT'">-->
-                                        <!--&lt;!&ndash;<datepicker ng-model="jobBuildRequest.startTime" show-weeks="true"&ndash;&gt;-->
-                                                    <!--&lt;!&ndash;required class="well well-sm"></datepicker>&ndash;&gt;-->
-                                        <!--<input type="text" datepicker-popup="yyyy-MM-dd" class="input-sm" style="width: 98%"-->
-                                               <!--ng-model="jobBuildRequest.startTime"-->
-                                               <!--placeholder="Click to choose START date..." is-open="opened" />-->
-                                    <!--</div>-->
                                 </div>
                             </td>
                         </tr>
