KYLIN-1259 update progressbar background color

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -669,3 +669,6 @@ ul.messenger .messenger-message-inner,.ngCellText {
 .streamingParserCtr .chosen-container{
   width:200px !important;
 }
+.progress.progress-striped {
+  background-color:#DCDCDC;
+}
