KYLIN-1251 enable nav tree expand and hide funciton

--- a/webapp/app/partials/projects/project_table_tree.html
+++ b/webapp/app/partials/projects/project_table_tree.html
@@ -29,6 +29,7 @@
                      tree-model="selectedSrcDb"
                      options="treeOptions"
                      on-selection="showSelected(node)"
+                     on-dblclick="onDblClick(node)"
                      selected-node="selectedSrcTable">
             {{node.name}} {{!!(node.type_NAME)?'(' + trimType(node.type_NAME) + ')' : ''}}
         </treecontrol>
