--- a/webapp/app/partials/cubeDesigner/advanced_settings.html
+++ b/webapp/app/partials/cubeDesigner/advanced_settings.html
@@ -144,7 +144,7 @@
                             ng-options="rowkey_column.column as rowkey_column.column for rowkey_column in cubeMetaFrame.rowkey.rowkey_columns">
                         <option value=""></option>
                     </select>
-                    <p ng-if="state.mode=='view'" style="word-wrap: break-word; word-break: normal;max-width: 1000px ">{{aggregation_groups}}</p>
+                    <p ng-if="state.mode=='view'" style="word-wrap: break-word; word-break: break-all;">{{aggregation_groups}}</p>
                 </td>
                 <td ng-if="state.mode=='edit'" class="col-xs-1">
                     <button class="btn btn-xs btn-info"
