KYLIN-1214 Remove 'Back to My Cubes' link in non-edit mode

--- a/webapp/app/partials/cubes/cube_schema.html
+++ b/webapp/app/partials/cubes/cube_schema.html
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col-xs-8">
                         <p style="color: #808080;text-align: left;"><b>Note:</b> inputs with <span style="color: lightblue">light blue</span> border are mandatory.</p>
-                        <div>
+                        <div ng-if="state.mode=='edit'">
                             <a href="cubes" class="pull-left"><i class="fa fa-arrow-left"></i> Back to My Cubes</a>
                         </div>
                     </div>
