--- a/webapp/app/partials/models/models_tree.html
+++ b/webapp/app/partials/models/models_tree.html
@@ -45,7 +45,7 @@
 
         <ul class="list-group models-tree">
           <li class="list-group-item" ng-repeat="model in modelsManager.models">
-            <span class="strong"><a style="cursor: pointer" ng-click="openModal(model)">{{model.name}}</a></span>
+            <span class="strong"><a style="cursor: pointer;word-break:break-all;" ng-click="openModal(model)">{{model.name}}</a></span>
             <!--<a  class="pull-right btn btn-info btn-xs" ng-if="userService.hasRole('ROLE_ADMIN')"  ng-click="dropModel(modelsManager.selectedModel)"><span class="glyphicon glyphicon-remove"></span></a>-->
             <!--<a  class="pull-right btn btn-primary btn-xs" href="models/edit/{{model.name}}" style="margin-right: 8px;" ng-if="userService.hasRole('ROLE_ADMIN') || hasPermission(model, permissions.ADMINISTRATION.mask, permissions.MANAGEMENT.mask, permissions.OPERATION.mask)"><span class="glyphicon glyphicon-edit"></span></a>-->
 
