--- a/webapp/app/partials/jobs/job_submit.html
+++ b/webapp/app/partials/jobs/job_submit.html
@@ -46,20 +46,13 @@
                                     <div ng-if="metaModel.model.partition_desc.partition_type=='APPEND'">
                                         {{ jobBuildRequest.startTime = cube.segments[cube.segments.length-1].date_range_end| reverseToGMT0 }}
                                     </div>
-                                    <!--<div ng-if="metaModel.model.partition_desc.cube_partition_type=='UPDATE_INSERT'">-->
-                                        <!--&lt;!&ndash;<datepicker ng-model="jobBuildRequest.startTime" show-weeks="true"&ndash;&gt;-->
-                                                    <!--&lt;!&ndash;required class="well well-sm"></datepicker>&ndash;&gt;-->
-                                        <!--<input type="text" datepicker-popup="yyyy-MM-dd" class="input-sm" style="width: 98%"-->
-                                               <!--ng-model="jobBuildRequest.startTime"-->
-                                               <!--placeholder="Click to choose START date..." is-open="opened" />-->
-                                    <!--</div>-->
                                 </div>
                             </td>
                         </tr>
                         <tr>
                             <td>End Date (Exclude)</td>
                             <td>
-                                <input type="text" datepicker-popup="yyyy-MM-dd" class="input-sm" style="width: 98%"
+                                <input type="text" datepicker-popup="yyyy-MM-dd" datepicker-timezone class="input-sm" style="width: 98%"
                                        ng-model="jobBuildRequest.endTime"
                                        placeholder="Click to choose END date..." is-open="opened" />
                             </td>
@@ -79,7 +72,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-success" ng-click="updateDate();rebuild(true)" ng-disabled="jobBuildRequest.endTime<=0">Submit</button>
+        <button class="btn btn-success" ng-click="rebuild(true)" ng-disabled="jobBuildRequest.endTime<=0">Submit</button>
         <button class="btn btn-primary" ng-click="cancel()">Close</button>
     </div>
 </script>
