minor,use angularjs directive to convert GMT0 timestamp for partition_date,rm jobEndTime rollback action

--- a/webapp/app/partials/jobs/job_submit.html
+++ b/webapp/app/partials/jobs/job_submit.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-success" ng-click="rebuild(true)" ng-disabled="jobBuildRequest.endTime<=0">Submit</button>
+        <button class="btn btn-success" ng-click="rebuild()" ng-disabled="jobBuildRequest.endTime<=0">Submit</button>
         <button class="btn btn-primary" ng-click="cancel()">Close</button>
     </div>
 </script>
