KYLIN-1128 cube,model  metadata clone

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -672,3 +672,11 @@ ul.messenger .messenger-message-inner,.ngCellText {
 .progress.progress-striped {
   background-color:#DCDCDC;
 }
+
+.clone-cube-window .modal-dialog {
+  width: 600px; /* desired relative width */
+}
+
+.tooltip {
+  z-index:1240000 !important;
+}
