minor, fix jobs page ui display issue

--- a/webapp/app/partials/jobs/jobs.html
+++ b/webapp/app/partials/jobs/jobs.html
@@ -21,7 +21,7 @@
     <div class="col-xs-3">
         <form ng-if="userService.isAuthorized()">
             <div class="form-group" ng-if="userService.hasRole('ROLE_MODELER')" >
-                <a class="btn btn-xs btn-info" ng-if="Manage Project" href="projects" tooltip="Manage Project"><i class="fa fa-gears"></i></a>
+                <a class="btn btn-xs btn-info" href="projects" tooltip="Manage Project"><i class="fa fa-gears"></i></a>
                 <a class="btn btn-xs btn-primary" style="width: 29px" tooltip="Add Project" ng-click="toCreateProj()">
                     <i class="fa fa-plus"></i>
                 </a>
